# brand-microservices

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.traefik  LICENSE  Makefile  Pipfile  README.md  Todo.md  alembic.ini  brand-microservices.drawio  docker-compose.base.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  traefik.prod.toml
.ci/: docker-compose.yml
.github/: labeler.yml  pr-labeler.yml  pr-limit.yml  pull_request_template.md
.github/workflows/: brand_cd.yml  brand_ci.yml  brand_microservices_ci.yml  pr_limit.yml
apis/brand-api/: Dockerfile  Pipfile  docker-compose.yaml  main.py  requirements.txt
apis/brand-api/app/: main.py
apis/brand-api/app/db/: crud.py  database.py
apis/brand-api/core/models/: database.py  main_models.py
apis/brand-api/v1/endpoints/: crud.py
apis/brand_api/: Dockerfile  crud.py  dependencies.py  deps.py  log.ini  main.py  schemas.py
apis/brand_api/core/models/: database.py
apis/brand_api/db/: database.py  models.py  schemas.py
apis/brand_api/db/migrations/: env.py
apis/brand_api/db/migrations/versions/: 0001_create_brands_and_categories.py  0001_create_users.py  0002_create_users.py  0003_timestamp.py  0003_timestamps_and_ownership.py  0004_add_username_to_users.py  0005_update_ownership_fields.py  0006_update_user_foreign_keys.py  0007_remodel_brands_with_socials.py  0008_add_brands_location.py
apis/brand_api/db/models/: database.py  main_models.py
apis/brand_api/db/schemas/: schemas.py
apis/brand_api/routers/: brand_id_socials.py  brands.py  categories.py  socials.py  users.py
apis/brand_api/tests/: conftest.py  test_app.py  test_brand.py  test_brand_socials.py  test_categories.py  test_main.py  test_socials.py  test_user.py
apis/brand_api/utils/: log.ini  logging.py  password_hash.py  tokens.py
apis/brand_api/v1/endpoints/: crud.py
common/scripts/: docker-build.sh  docker-up.sh  lock-requirements.sh
